fix: force left-align in mobile menu panel (flex-start + text-align)

--- a/web/styles/navbar.css
+++ b/web/styles/navbar.css
@@ -455,6 +455,10 @@
     transform: translateX(0);
   }
   
+  .navbar-links {
+    align-items: flex-start;
+  }
+
   .navbar-links li {
     width: 100%;
     margin: 0;
@@ -465,6 +469,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    text-align: left;
     padding: 13px 16px;
     font-size: 0.95rem;
     font-weight: 500;
